--- a/css/Home.css
+++ b/css/Home.css
@@ -1161,3 +1161,29 @@
     margin-bottom: 10px;
   }
 }
+
+/*****LOADING*****/
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color:black ;
+  display: flex;
+  justify-content: center;
+  padding-top: 10%;
+  align-items:initial;
+  display: inline-block;
+  text-align: center;
+}
+.loader {
+  width: 300px;
+  height: 300px;
+  position: relative;
+}
+.loading-text{
+  display: block;
+  color: white;
+  display: block;
+}
