--- a/css/Hyper-mint-now.css
+++ b/css/Hyper-mint-now.css
@@ -401,3 +401,55 @@
 .u-section-1 .u-icon-3:hover {
   transform: scale(1.3) !important;
 }
+
+/*****LOADING*****/
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color:black ;
+  display: flex;
+  justify-content: center;
+  padding-top: 10%;
+  align-items:initial;
+  display: inline-block;
+  text-align: center;
+}
+.loader {
+  width: 300px;
+  height: 300px;
+  position: relative;
+}
+.loading-text{
+  display: block;
+  color: white;
+  display: block;
+}
+
+/*****LOADING*****/
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color:black ;
+  display: flex;
+  justify-content: center;
+  padding-top: 10%;
+  align-items:initial;
+  display: inline-block;
+  text-align: center;
+}
+.loader {
+  width: 300px;
+  height: 300px;
+  position: relative;
+}
+.loading-text{
+  display: block;
+  color: white;
+  display: block;
+}
